# socket-app

./: CMakeLists.txt  LICENSE.txt  main.cpp
include/: TcpSocketServer.h
src/: TcpSocketServer.cpp
tcp-client/: CMakeLists.txt  client.cpp
tcp-client/include/: TcpClientSocket.h
tcp-client/src/: TcpClientSocket.cpp
tcp-server/: CMakeLists.txt
tcp-server/include/: TcpSocketServer.h
tcp-server/src/: TcpSocketServer.cpp
